--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "skrip42/chron-bundle",
+    "name": "skrip42/cron-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony Chron-bundle",
+    "description": "Symfony Cron-bundle",
     "keywords": [],
     "homepage": "https://symfony.com",
     "version": "1.0",
@@ -25,7 +25,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Skrip42\\Bundle\\ChronBundle\\":""
+            "Skrip42\\Bundle\\CronBundle\\":""
         }
     }
 }
