--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "homepage": "https://github.com/Skrip42/cron-bundle",
     "version": "v1.0",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "skrip",
@@ -22,10 +23,14 @@
         "symfony/console": "^4.4|^5.0",
         "symfony/yaml": "^4.4|^5.0"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Skrip42\\Bundle\\CronBundle\\":""
+        }
+    },
+    "extra": {
+        "pranch-alias": {
+            "dev-master": "1.x-dev"
         }
     }
 }
