--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Symfony Cron-bundle",
     "keywords": [],
     "homepage": "https://github.com/Skrip42/cron-bundle",
-    "version": "v1.0",
+    "version": "v1.1",
     "license": "MIT",
     "minimum-stability": "dev",
     "authors": [
@@ -16,7 +16,8 @@
     "require": {
         "php": "^7.1.3",
         "symfony/config": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0"
+        "symfony/dependency-injection": "^4.0|^5.0",
+        "skrip42/advanced-repository": "^2.2"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^1.5|^2.0",
